--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -48,6 +48,50 @@ body{
     background: var(--grey);
     overflow-x: hidden;
 }
+input,select{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid var(--color-white);
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out;
+    font-size: 16px;
+    outline: none;
+    margin-bottom: 10px;
+    background-color: var(--color-white);
+    color: var(--color-primary);
+}
+
+input:focus {
+    box-shadow: 0 4px 8px var(--color-white);
+}
+
+button{
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin: auto;
+    background-color: var(--color-white);
+    border: 2px dashed var(--color-primary);
+    color: var(--color-primary);
+}
+button:hover{
+    background-color: var(--color-primary);
+    color: white;
+}
+
+.profilePhoto img {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+}
+
+.mt-5{
+    margin-top: 10px;
+}
 
 .sidebar{
     position: fixed;
