--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -87,7 +87,28 @@ button:hover{
 h1{
     color: var(--dark);
 }
-
+.btn{
+    border-radius: 5px;
+    padding: 8px 15px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin: auto;
+    background-color: var(--color-white);
+    border: 2px dashed var(--success);
+    color: var(--success);
+}
+.btn-danger{
+    border-radius: 5px;
+    padding: 8px 15px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin: auto;
+    border: 2px solid var(--danger);
+    background-color: var(--danger);
+    color: #ffffff;
+}
 .profilePhoto img {
     width: 200px;
     height: 200px;
