--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -106,9 +106,20 @@ h1{
     transition: all 0.3s ease-in-out;
     margin: auto;
     border: 2px solid var(--danger);
-    background-color: var(--danger);
-    color: #ffffff;
+    background-color: var(--color-white);
+    border: 2px dashed var(--danger);
+    color: var(--danger);
 }
+
+.btn:hover{
+    background-color: var(--success);
+    color: white;
+}
+.btn-danger:hover{
+    background-color: var(--danger);
+    color: white;
+}
+
 .profilePhoto img {
     width: 200px;
     height: 200px;
@@ -630,6 +641,82 @@ h1{
 .content main .bottom-data .reminders .task-list li:last-child{
    margin-bottom: 0;
 }
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999
+}
+
+.modal-content {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 33%;
+}
+.modal-content h2 {
+    margin-bottom: 13px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+/* modal */
+/* delete modal */
+
+.delete-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    z-index: 9;
+}
+
+.delete-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.delete-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.delete-modal-btn {
+    padding: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+/* delete modal */
 
 @media screen and (max-width: 768px) {
     .sidebar{
