--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -724,6 +724,34 @@ h1{
 }
 /* delete modal */
 
+/* grid loader */
+.gc {
+    display: none;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.gb{
+    width: 100%;
+    height: 100%;
+    background-color: #3498db;
+    border-radius: 8px;
+    animation: pulse 1.5s infinite alternate;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+@keyframes pulse {
+    to {
+        transform: scale(1.2);
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+}
+
+
+
+
+
+
 @media screen and (max-width: 768px) {
     .sidebar{
         width: 200px;
